--- a/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
@@ -1,6 +1,9 @@
 ﻿@section Styles{
     <link href="~/css/reservations.css" rel="stylesheet" />
+    <style>
+       
 
+    </style>
 }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.css">
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
@@ -18,7 +21,7 @@
                 <form role="form"
                       class="php-email-form"
                       data-aos="fade-up"
-                      data-aos-delay="100">
+                      data-aos-delay="100" id="bookinglist">
                     <div class="row">
                         @*<div class="form-check" id="sameMemberDiv">
                             <input class="" type="checkbox" value="" id="sameMemberCheck" role="radio">
