--- a/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
@@ -2,6 +2,11 @@
 
 @section Styles{
     <link href="~/css/membermanagement.css" rel="stylesheet" />
+    <style>
+        .edit{
+            color:#aaa;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 }
 <!-- =======MemberManagement navbar  Section ======= -->
